--- a/src/app/team-page/team-page.component.html
+++ b/src/app/team-page/team-page.component.html
@@ -1,3 +1,9 @@
 <p>
   team-page works!
 </p>
+<div class="scene scene--card">
+  <div class="card" (click)="flip('card1')" id="card1">
+    <div class="card__face card__face--front">front</div>
+    <div class="card__face card__face--back">back</div>
+  </div>
+</div>
